--- a/packages/client/src/components/loginScreen.css
+++ b/packages/client/src/components/loginScreen.css
@@ -14,8 +14,9 @@ body {
     position: relative;
     background: #ffffff;
     width: 656px;
-    height: 960px;
-    top:-140px;
+    height: 600px;
+    border-radius: 20px;
+    top:-70px;
     left:-170px;
     padding: 20px;
     text-align: center;
@@ -47,6 +48,7 @@ body {
     height: 29px;
     color: #ffffff;
     display: flex;
+
 }
 
 .log{
