--- a/packages/client/src/components/loginScreen.css
+++ b/packages/client/src/components/loginScreen.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?famaly=Comfotaa&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?famaly=Comfotaa&display=swap');
 body {
     background: #d0d0d0;
     overflow-y: hidden;
@@ -73,3 +73,4 @@ body {
     border-bottom: 1px solid #f00;
     width: 670px;
 }
+ */
